Googl url shortener Snoopy CURL requests Bunch of junk in Bot.php API Type in config

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
         "slim/slim": "2.*",
-        "predis/predis": "0.8.*@dev"
+        "predis/predis": "0.8.*@dev",
     }
 }
